--- a/DataModule.resx
+++ b/DataModule.resx
@@ -127,7 +127,7 @@
     <value>0, 0</value>
   </metadata>
   <metadata name="ctnNZST.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>243, 17</value>
+    <value>406, 17</value>
   </metadata>
   <metadata name="oleDbInsertCommand1.DesignTimeVisible" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
@@ -163,7 +163,7 @@
     <value>DELETE FROM `ARENA` WHERE ((`ArenaID` = ?) AND ((? = 1 AND `ArenaName` IS NULL) OR (`ArenaName` = ?)) AND ((? = 1 AND `StreetAddress` IS NULL) OR (`StreetAddress` = ?)) AND ((? = 1 AND `Suburb` IS NULL) OR (`Suburb` = ?)) AND ((? = 1 AND `City` IS NULL) OR (`City` = ?)) AND ((? = 1 AND `PhoneNumber` IS NULL) OR (`PhoneNumber` = ?)))</value>
   </data>
   <metadata name="daArena.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
+    <value>273, 17</value>
   </metadata>
   <metadata name="oleDbSelectCommand2.DesignTimeVisible" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
@@ -208,7 +208,7 @@
     <value>DELETE FROM `CHALLENGE` WHERE ((`ChallengeID` = ?) AND ((? = 1 AND `ChallengeName` IS NULL) OR (`ChallengeName` = ?)) AND ((? = 1 AND `EventID` IS NULL) OR (`EventID` = ?)) AND ((? = 1 AND `StartTime` IS NULL) OR (`StartTime` = ?)) AND ((? = 1 AND `Status` IS NULL) OR (`Status` = ?)) AND ((? = 1 AND `Capacity` IS NULL) OR (`Capacity` = ?)))</value>
   </data>
   <metadata name="daChallenge.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>458, 17</value>
+    <value>539, 17</value>
   </metadata>
   <metadata name="oleDbSelectCommand3.DesignTimeVisible" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
@@ -253,7 +253,7 @@
     <value>DELETE FROM `COMPETITOR` WHERE ((`CompetitorID` = ?) AND ((? = 1 AND `UserName` IS NULL) OR (`UserName` = ?)) AND ((? = 1 AND `LastName` IS NULL) OR (`LastName` = ?)) AND ((? = 1 AND `Gender` IS NULL) OR (`Gender` = ?)) AND ((? = 1 AND `DateOfBirth` IS NULL) OR (`DateOfBirth` = ?)) AND ((? = 1 AND `FirstName` IS NULL) OR (`FirstName` = ?)))</value>
   </data>
   <metadata name="daCompetitor.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>622, 17</value>
+    <value>703, 17</value>
   </metadata>
   <metadata name="oleDbSelectCommand4.DesignTimeVisible" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
@@ -292,7 +292,7 @@
     <value>False</value>
   </metadata>
   <metadata name="daChallengeCompetitor.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>800, 17</value>
+    <value>17, 17</value>
   </metadata>
   <metadata name="oleDbSelectCommand5.DesignTimeVisible" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
@@ -337,9 +337,12 @@
     <value>DELETE FROM `EVENT` WHERE ((`EventID` = ?) AND ((? = 1 AND `EventName` IS NULL) OR (`EventName` = ?)) AND ((? = 1 AND `ArenaID` IS NULL) OR (`ArenaID` = ?)) AND ((? = 1 AND `Status` IS NULL) OR (`Status` = ?)) AND ((? = 1 AND `Capacity` IS NULL) OR (`Capacity` = ?)) AND ((? = 1 AND `EventDate` IS NULL) OR (`EventDate` = ?)))</value>
   </data>
   <metadata name="daEvent.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 51</value>
+    <value>881, 17</value>
   </metadata>
   <metadata name="dsNZST.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>147, 51</value>
+    <value>1011, 17</value>
+  </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>275</value>
   </metadata>
 </root>
